<resources>
    <string name="app_name">Jane Louise</string>
    <string name="rating_count">5</string>
    <string name="rating_label">Рейтинг</string>
    <string name="code_strings_label">Написано строк кода</string>
    <string name="code_strings_count">25000</string>
    <string name="projects_count">5</string>
    <string name="projects_label">Проектов</string>
    <string name="emailName">Почта</string>
    <string name="email">ggl.crash@gmail.com</string>
    <string name="profileName">Профиль</string>
    <string name="profileLink">http://vk.com/crash16</string>
    <string name="repoName">Репозиторий</string>
    <string name="repoLink">http://github.com/mygit</string>
    <string name="infoName">О себе</string>
    <string name="info">Различная информация</string>
    <string name="doneBtnText">Done!</string>
    <string name="user_change_image">Изменить фотографию профиля</string>
    <string name="user_photo.load">Загрузить из галлереи</string>
    <string name="user_photo.capture">Сделать снимок</string>
    <string name="user_photo.cancel">Отменить</string>
    <string name="user_photo.change_title">Изменить фотографию профиля</string>
    <string name="choose_photo">Выберите фото</string>
    <string name="user_photo_reset">Сбросить фото</string>
    <string name="get_permissions_text">Для корректной работы приложения необходимо дать требуемые разрешения</string>
    <string name="allow_permission_text">Разрешить</string>
    <string name="check_link">Проверьте ссылку</string>
    <string name="enter_button_text">Войти</string>
    <string name="enter_text_upper">ВОЙТИ</string>
    <string name="password_text">Пароль</string>
    <string name="forget_password_text">Забыли пароль?</string>
    <string name="try_again">Попробуйте еще раз!</string>
</resources>
