<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior=".ui.behaviors.CustomNestedScrollBehavior"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        style="@style/mainLinearLayoutHorizontal">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_call_24dp"/>

        <LinearLayout
            style="@style/innerLinearLayoutVertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/mobile_edittext"
                    style="@style/maintext.profile"
                    android:hint="Мобильный телефон"
                    android:inputType="phone"
                    android:text="89191894428"
                    />
            </android.support.design.widget.TextInputLayout>
            >
        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:id="@+id/call_image"
            android:src="@drawable/ic_phone_in_talk_24dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="@dimen/size_large_72"
        android:background="@color/grey"/>

    <LinearLayout
        style="@style/mainLinearLayoutHorizontal">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_email_24dp"/>

        <LinearLayout
            style="@style/innerLinearLayoutVertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/email_edittext"
                    style="@style/maintext.profile"
                    android:hint="@string/emailName"
                    android:inputType="textEmailAddress"
                    android:text="@string/email"
                    />
            </android.support.design.widget.TextInputLayout>
            >
        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:id="@+id/email_image"
            android:src="@drawable/ic_send_24dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="@dimen/size_large_72"
        android:background="@color/grey"/>

    <LinearLayout
        style="@style/mainLinearLayoutHorizontal">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_person_24dp"/>

        <LinearLayout
            style="@style/innerLinearLayoutVertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/profile_edittext"
                    style="@style/maintext.profile"
                    android:hint="@string/profileName"
                    android:inputType="textWebEditText"
                    android:text="@string/profileLink"
                    />
            </android.support.design.widget.TextInputLayout>
            >
        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:id="@+id/open_profile_image"
            android:src="@drawable/ic_visibility_24dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="@dimen/size_large_72"
        android:background="@color/grey"/>

    <LinearLayout
        style="@style/mainLinearLayoutHorizontal">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_cloud_circle_24dp"/>

        <LinearLayout
            style="@style/innerLinearLayoutVertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/repo_edittext"
                    style="@style/maintext.profile"
                    android:hint="@string/repoName"
                    android:inputType="textWebEditText"
                    android:text="@string/repoLink"
                    />
            </android.support.design.widget.TextInputLayout>
            >
        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:id="@+id/open_repo_image"
            android:src="@drawable/ic_visibility_24dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="@dimen/size_large_72"
        android:background="@color/grey"/>

    <LinearLayout
        style="@style/mainLinearLayoutHorizontal">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_local_library_24dp"/>

        <LinearLayout
            style="@style/innerLinearLayoutVertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/info_edittext"
                    style="@style/maintext.profile"
                    android:hint="@string/infoName"
                    android:text="@string/info"
                    />
            </android.support.design.widget.TextInputLayout>
            >
        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_visibility_24dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="@dimen/size_large_72"
        android:background="@color/grey"
        />


</LinearLayout>

</android.support.v4.widget.NestedScrollView>
